[gd_scene load_steps=6 format=2]

[ext_resource path="res://room/door.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, -5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "door_close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, -5 ), Vector2( 0, -5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "door_open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ), Vector2( 20, -5 ) ]
}

[node name="Door" type="Node2D"]
script = ExtResource( 1 )

[node name="TriggerArea" type="Area2D" parent="."]
position = Vector2( 0, -10 )
collision_layer = 2
collision_mask = 2

[node name="Trigger" type="CollisionShape2D" parent="TriggerArea"]
scale = Vector2( 1, 0.5 )
shape = SubResource( 2 )
disabled = true

[node name="ClosedBody" type="StaticBody2D" parent="."]
position = Vector2( 0, -5 )
collision_layer = 257
collision_mask = 0

[node name="Collider" type="CollisionShape2D" parent="ClosedBody"]
scale = Vector2( 1, 0.5 )
shape = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 20, -5 )
color = Color( 0.670588, 0.760784, 0.345098, 1 )
polygon = PoolVector2Array( -10, 5, -10, -5, 10, -5, 10, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/door_close = SubResource( 4 )
anims/door_open = SubResource( 5 )

[connection signal="body_entered" from="TriggerArea" to="." method="_on_TriggerArea_body_entered"]
